--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,14 @@ button, a, div.project-folder > h4 {
     cursor: pointer;
 }
 
+h2 {
+    margin: 16px 0;
+}
+
+.priority {
+    color: red;
+}
+
 /* Layout */
 
 html, body {
